fix overflow x

--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,7 @@
 body{
     background-color: #f1f1f1;
     background-color: #ffffff;
-    max-width: 100%;
+    overflow-x: hidden;
 }
 
   /*--------------------------------------------------------------
